# primecloud

./: .gitignore  package.json
Documents/: opencode.md
prime-cloud/: .env.example  .gitignore  .npmrc  index.html  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
prime-cloud/.github/workflows/: ci.yml  deploy.yml
prime-cloud/apps/api/: .env.example  package.json  tsconfig.json
prime-cloud/apps/api/prisma/: schema.prisma  seed.ts
prime-cloud/apps/api/src/: app.module.ts  main.ts
prime-cloud/apps/dashboard/: package.json
prime-cloud/apps/dashboard/app/: globals.css  layout.tsx
prime-cloud/apps/dashboard/lib/: api.ts
prime-cloud/apps/pos/: index.html  package.json
prime-cloud/apps/pos/src/: App.tsx  index.css
prime-cloud/apps/pos/src-tauri/: Cargo.toml  tauri.conf.json
prime-cloud/deploy/: README.txt  build.sh  package.json  server.js  start.sh
prime-cloud/deploy/public/dashboard/: 404.html  dashboard.html  dashboard.txt  index.html  index.txt
prime-cloud/deploy/public/pos/: index-Bn6PNhll.css  index-CMfk_FXB.js  index.html
prime-cloud/infrastructure/docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.pos
prime-cloud/infrastructure/kubernetes/: api.yaml  dashboard.yaml  ingress.yaml  namespace.yaml  pos.yaml
prime-cloud/infrastructure/terraform/: main.tf
prime-cloud/src/: App.tsx  index.css  main.tsx
prime-cloud/src/contexts/: LanguageContext.tsx
prime-cloud/src/data/: mockData.ts
prime-cloud/src/pages/: Dashboard.tsx  Login.tsx  Orders.tsx  POS.tsx  Placeholder.tsx  Products.tsx  Reports.tsx  Settings.tsx
(+90 files in other folders)
