[package]
name = "prime-pos"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["dialog"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "prime_pos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
